# joinup

./: LICENSE  README.md  pyproject.toml
backend/core/: celery.py  settings.py  urls.py
backend/services/email/: handler.py
backend/services/email/backends/base/: __init__.py
backend/services/email/backends/console/: __init__.py
backend/services/email/backends/dummy/: __init__.py
backend/services/email/backends/postmark/: __init__.py
backend/services/sms/: handler.py
backend/services/sms/backends/base/: __init__.py
backend/services/sms/backends/console/: __init__.py
backend/services/sms/backends/dummy/: __init__.py
backend/services/sms/backends/twilio/: __init__.py
backend/users/: models.py  tasks.py
backend/users/migrations/: 0001_initial.py
backend/users/serializers/: v100.py  v110.py
backend/users/tests/: test_api_query_count.py  test_send_verification_tasks.py  test_signup.py  test_task_query_count.py
backend/users/urls/: v100.py  v110.py
backend/users/viewsets/: v100.py  v110.py
